crm-os-starter/src/main/fabric8/crm-route.yml
apiVersion: v1
kind: Route
metadata:
  name: crm
spec:
  port:
    targetPort: intermapper
  to:
    kind: Service
    name: crm-service
