crm-os-starter/src/main/fabric8/crmscs-route.yml
apiVersion: v1
kind: Route
metadata:
  name: crms
spec:
  port:
    targetPort: tungsten-https
  to:
    kind: Service
    name: crm-service
  tls:
    termination: passthrough
